--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,10 @@
 
 <body>
 {% block background %}
-<p style="background-image: url('https://images.unsplash.com/photo-1554734867-bf3c00a49371?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');"></p>
-
+    <style>
+        body {
+        }
+</style>
 {% endblock %}
 </body>
 
