--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -1,140 +1,47 @@
-<!-- Custom file for standardizing Project Data
-This HTML is setup as as a Jinja2 layout, coders use layouts for:
- ... standardization of style
- ... setting expectations for data
- ... code reuse
--->
 <!DOCTYPE HTML>
 <html lang="en">
-
-
-{% set scrum_board = "https://github.com/sarayu-pr11/saas/projects/1" %}
-{% set repo = "https://github.com/sarayu-pr11/saas" %}
-
+{% include "layouts/navbar.html" %}
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <body>
+    <h1>SAAS EMERGENCY TECH</h1>
+</body>
     <style>
-        :root{
-            --white: whitesmoke;
-            --black: black;
-            --grey: grey;
-        }
 
         html, body{
+            margin: 0;
+            height: 100%;
+            background-repeat:no-repeat;
+            background-attachment:fixed;
+            background-position:100% 100%;
+            min-height:100%;
+            min-width:100%;
+            background-size:cover;
             margin: 0;
             height: 100%;
             animation: fadein 2s;
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: var(--grey);
-            color: var(--black);
-        }
+            background-color: #293359;
+            font-family: "Trebuchet MS";
 
-        .dark-mode {
-            background-color: var(--white);
-            color: var(--black);
         }
 
         h1{
             font-size: 5em;
+            font-family:'Monotype Corsiva';
+            color:ghostwhite;
         }
+        .button1 {border-radius: 8px;}
+        .button2 {border-radius: 8px;}
+        .button3 {border-radius: 8px;}
+        .button4 {border-radius: 8px;}
 
-        a {
-            color: midnightblue;
-        }
-
-        .fa{
-            font-size: 3em;
-            letter-spacing: 1em;
-            transition: all .2s;
-            color: black;
-        }
-
-
-
-        .btn:link,
-        .btn:visited {
-            text-transform: uppercase;
-            text-decoration: none;
-            padding: 15px 40px;
-            display: inline-block;
-            border-radius: 100px;
-            transition: all .2s;
-            position: absolute;
-            color: black;
-            font-size: 2.5em;
-        }
-
-        .btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
-        }
-
-        .btn:active {
-            transform: translateY(-1px);
-            box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
-        }
-
-        .row{
-
-
-            margin: auto;
-        }
 
     </style>
 
-    <title>Emergency Tech </title>
+    {% block meta %}
+    {% endblock %}
 
-</head>
-
-<body>
-{% include "layouts/navbar.html" %}
-
-{% block body %}
-    <div class="container-fluid">
-        <div class="row justify-content-end" style="padding: 2%;">
-            <div class="col-2" style="text-align: right;">
-                {% block info %}
-                    <!-- notice jinja style variables used in href's -->
-                    <a><h5>{{basename}}</h5></a>
-
-                {% endblock %}
-            </div>
-        </div>
-
-        <div class="product" style="margin-top: 2%;">
-            <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
-
-                <div class="col-8" >
-                    <h1 style="color: black">{{ project }} Emergency Tech</h1>
-                </div>
-
-            </div>
-
-            <div class="row" style="padding-left: 10%;">
-                {% block links %}
-                    <div class="col-3">
-                        <a href="{{ scrum_board }}" class="btn">Scrum Board</a>
-                    </div>
-
-                    <div class="col-3">
-                        <a href="{{ repo }}" class="btn">Repository</a>
-                    </div>
-                {% endblock %}
-            </div>
-
-        </div>
-    </div>
-{% endblock %}
-
-</body>
-
-{% block background %}
-
-    <p style="background-image: url('https://images.unsplash.com/photo-1554734867-bf3c00a49371?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');"></p>
-
-{% endblock %}
-
-</html>
