--- a/templates/attendance_security_html/crud_attendance.html
+++ b/templates/attendance_security_html/crud_attendance.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 
-<!-- EXTEND (layout.html), this is a template for all rendered pages in the project -->
-{% extends "layouts/login_layout.html" %}
+<!-- EXTEND (navbar2.html), this is a template for all rendered pages in the project -->
+
+{% set page_title = "CRUD Page" %}
+{% set page_description = "CRUD Database!" %}
+{% set img = "https://media.timeout.com/images/105787696/630/472/image.jpg" %}
+
+
 
 <!-- CONTENT (in <head>), content for this page -->
-{% block meta %}
     <title>CRUD page</title>
-    <script src={{  url_for("crud.static", filename="javascript/validation.js", version='101') }}></script>
-    <script src={{  url_for("crud.static", filename="javascript/reload_page.js", version='101') }}></script>
-{% endblock %}
+
+
 
 <!-- CONTENT (in <body>), content for this page -->
+
 {% block content %}
-    <h1><a href={{ url_for('crud.crud_logout') }}> Log Out </a></h1>
-
-    <center><h2 style ='...'> {{ current_user.name }} is logged in</h2></center>
-    <center><h2 style ='...'> {{ crud.crud1 }} is logged in</h2></center>
-
-    <div class="container py-4">
-        <header class="pb-3 mb-4 border-bottom border-primary text-dark">
-            <span class="fs-4">Teacher Admin Page</span>
-        </header>
-    </div>
     <div class="container py-4 text-light bg-success">
+        <header class="pb-3 mb-4 border-bottom">
+            <div class="d-flex align-items-center text-light text-decoration-none">
+                <span class="fs-4">SQL CRUD Admin Page</span>
+            </div>
+        </header>
 
-        <div class="container bg-secondary py-4">
+        <div class="container py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
                 <h2>Table Viewer</h2>
-
                 <div class="row align-items-md-stretch">
                     <table class="table">
                         <tbody>
@@ -47,9 +45,9 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Phone</th>
+                                <th>Favorite Restaurant</th>
+                                <th>Favorite Type of Food</th>
+
                             </tr>
                             </thead>
                             <tbody>
@@ -64,9 +62,10 @@
                                 <tr>
                                     <td>{{ row['userID'] }}</td>
                                     <td>{{ row['name'] }}</td>
-                                    <td>{{ row['email'] }}</td>
-                                    <td>{{ row['password'] | truncate(20) }}</td>
-                                    <td>{{ row['phone'] }}</td>
+                                    <td>{{ row['fav_res'] }}</td>
+                                    <td>{{ row['fav_food'] }}</td>
+
+
 
                                 </tr>
                             {% endfor %}
@@ -79,25 +78,27 @@
         </div>
 
 
-        <div class="container bg-secondary py-4">
-            <div class="p-5 mb-4 bg-light text-dark rounded-3">
+        <div class="container py-4">
+            <div class="p-5 mb-4 bg-light text-dark">
                 <h2>Create a new record</h2>
                 <form method="POST" ID="create" action={{url_for('crud.create')}} >
                     <table class="table">
                         <thead>
                         <tr>
                             <th><label for="name">Name</label></th>
-                            <th><label for="email">Email</label></th>
-                            <th><label for="password">Password</label></th>
-                            <th><label for="phone">Phone</label></th>
+                            <th><label for="fav_res">Favorite Restaurant</label></th>
+
+                            <th><label for="fav_food">Favorite Type of Food</label></th>
+
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
                             <td><input type="text" name="name" id="name" required></td>
-                            <td><input type="email" name="email" id="email" placeholder="abc@xyz.org" required></td>
-                            <td><input type="password" name="password" id="password" required></td>
-                            <td><input type="tel" name="phone" id="phone" pattern="[0-9]{10}" placeholder="1234567890" required></td>
+                            <td><input type="text" name="fav_res" id="fav_res" required></td>
+                            <td><input type="text" name="fav_food" id="fav_food" required></td>
+
+
                             <td><input type="submit" value="Create"></td>
                         </tr>
                         </tbody>
@@ -108,7 +109,7 @@
 
         </div>
 
-        <div class="container bg-secondary py-4">
+        <div class="container py-4">
 
             <div class="row mb-4 bg-light text-dark rounded-3">
 
@@ -165,7 +166,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <div class="p-5 mb-4 bg-light text-dark rounded-3">
+                    <div>
                         <h2>Delete</h2>
                         <form method="POST" ID="read" action={{url_for('crud.delete')}} >
                             <table id="read_table">
@@ -194,11 +195,5 @@
     </div>
 
 
-    <script>
-    function attendance_redirect() {
-        location.href = '/attendance';
-    }
-    </script>
 
 {% endblock %}
-
