--- a/templates/attendance_security_html/crud.html
+++ b/templates/attendance_security_html/crud.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-
 <!-- EXTEND (layout.html), this is a template for all rendered pages in the project -->
 {% extends "layouts/login_layout.html" %}
-
 <!-- CONTENT (in <head>), content for this page -->
 {% block meta %}
     <title>CRUD page</title>
     <script src={{  url_for("crud.static", filename="javascript/validation.js", version='101') }}></script>
     <script src={{  url_for("crud.static", filename="javascript/reload_page.js", version='101') }}></script>
-{% endblock %}
 
+{% endblock %}
 <!-- CONTENT (in <body>), content for this page -->
 {% block content %}
     <h1><a href={{ url_for('crud.crud_logout') }}> Log Out </a></h1>
-
     <center><h2 style ='...'> {{ current_user.name }} is logged in</h2></center>
-    <center><h2 style ='...'> {{ crud.crud1 }} is logged in</h2></center>
+    <center><button onclick="attendance_redirect()"> click here </button></center>
 
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
@@ -23,11 +20,9 @@
         </header>
     </div>
     <div class="container py-4 text-light bg-success">
-
         <div class="container bg-secondary py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
                 <h2>Table Viewer</h2>
-
                 <div class="row align-items-md-stretch">
                     <table class="table">
                         <tbody>
@@ -67,7 +62,6 @@
                                     <td>{{ row['email'] }}</td>
                                     <td>{{ row['password'] | truncate(20) }}</td>
                                     <td>{{ row['phone'] }}</td>
-
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -75,10 +69,7 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
-
         <div class="container bg-secondary py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
                 <h2>Create a new record</h2>
@@ -105,13 +96,9 @@
                     <p id="pswError"></p>
                 </form>
             </div>
-
         </div>
-
         <div class="container bg-secondary py-4">
-
             <div class="row mb-4 bg-light text-dark rounded-3">
-
                 <div class="col-md-3">
                     <div class="p-5 mb-4 bg-light text-dark rounded-3">
                         <h2>Read</h2>
@@ -136,7 +123,6 @@
                         </form>
                     </div>
                 </div>
-
                 <div class="col-md-6">
                     <div class="p-5 mb-4 bg-light text-dark rounded-3">
                         <h2>Update</h2>
@@ -163,7 +149,6 @@
                         </form>
                     </div>
                 </div>
-
                 <div class="col-md-3">
                     <div class="p-5 mb-4 bg-light text-dark rounded-3">
                         <h2>Delete</h2>
@@ -186,19 +171,13 @@
                         </form>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
 
-
     <script>
-    function attendance_redirect() {
-        location.href = '/attendance';
-    }
+        function attendance_redirect() {
+            location.href = '/attendance';
+        }
     </script>
-
 {% endblock %}
-
