--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -21,22 +21,41 @@
 <br>
 <br>
 <br>
-<h2>Saumya </h2>
-<h5>Hey!
+<h2>Arushi </h2>
+<h5>Hey y'all! Hope you enjoy our site! Helped out with the technical in our website, and also added additional pbl features.<br>
+    <strong>Role: Scrum Master and Deployment - </strong> I am the scrum master and I organize our group's tasks. Lastly, I was
+    responsible for deplyment on our website.
+<br>
+    <img alt="" src="/static/arushi.jpg" style="height: 400px" id="arushi" />
 </h5>
 
-<br>
-<br>
-<h2>Arushi </h2>
-<h5>Hey!
-</h5>
 
 
 <br>
 <br>
 <h2>Sarayu </h2>
-<h5>Hey!
+<h5>Hey! My name is Sarayu, and the I am super pumped you are here!<br>
+    <strong>Role: GitHub Admin - </strong>I handle all matters that revolve around GitHub. These include handling merges, and branches.
+    Additionally, I worked on pbl features, and making our project more technical.
+<br>
+
+    <img alt="" src="/static/saraju.png" style="height: 400px" id="sarayu" />
 </h5>
+
+
+<br>
+<br>
+<br>
+<h2>Saumya </h2>
+<h5>Hi guys! I worked on pbl features on the website. <br>
+    <strong>Role: Design manager - </strong> My main role
+    was design manager, so I was responsible for making our website appealing.
+
+
+<br>
+    <img alt="" src="/static/saumya.png" style="height: 300px" id="saumya" />
+</h5>
+
 
 </body>
 </html>
