--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -633,6 +633,11 @@
                         </div>
                     </li>
 
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                        <a class="nav-link" href={{ url_for('contact') }}>Contact</a>
+                    </li>
+
                 </nav>
         </div>
     </div>
